--- a/ResourceServer/src/main/resources/application.properties
+++ b/ResourceServer/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-server.port=8081
+server.port=0
 eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
 
 # These will allow you to access the server from other machines on your network
 #spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/appsdeveloperblog
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/appsdeveloperblog/protocol/openid-connect/certs
+
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
